--- a/client/src/App.css
+++ b/client/src/App.css
@@ -24,3 +24,22 @@
 .rounded-button {
   border-radius: 25px;
 }
+
+.news-feed {
+  margin-top: 100px;
+}
+
+.footer {
+  position: relative;
+  bottom: 0;
+}
+
+.like:hover i {
+  transform: scale(1.5);
+  transition-duration: 0.3s;
+}
+
+.unlike:hover i {
+  transform: scale(1.5);
+  transition-duration: 0.3s;
+}
