--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,7 +15,7 @@
   border-top: 2px solid #F8F9FA;
 }
 
-.landing-page .row {
+.vertical-center {
   display: flex;
   align-items: center;
   height: 100vh;
@@ -23,6 +23,24 @@
 
 .rounded-button {
   border-radius: 25px;
+}
+
+.about-page {
+  background-image: url('../src/images/daddy-daughter.jpg');
+  background-position: top;
+  background-size: cover;
+  height: 100vh;
+  margin-top: 50px;
+}
+
+.about-page-overlay {
+  background-color: rgba(0, 0, 0, .7);
+  height: 100%;
+}
+
+.about-tagline {
+  position: absolute;
+  top: 100px;
 }
 
 .news-feed {
