--- a/client/src/App.css
+++ b/client/src/App.css
@@ -52,6 +52,31 @@
   display: none;
 }
 
+.comment {
+  border-bottom: 1px solid #e3e3e3;
+}
+
+.comment-text {
+  font-size: 1.1rem;
+}
+
+.comment-divider {
+  border-bottom: 1px solid #e3e3e3;
+}
+
+.comments-button:hover {
+  text-decoration: underline;
+}
+
+.comments-button:focus {
+  box-shadow: none;
+}
+
+.comments-button:not(:disabled):not(.disabled):active:focus {
+  text-decoration: underline;
+  box-shadow: none;
+}
+
 .sidebar-button {
   width: 100%;
   border-radius: 0;
