--- a/client/src/App.css
+++ b/client/src/App.css
@@ -18,7 +18,7 @@
 .vertical-center {
   display: flex;
   align-items: center;
-  height: 100vh;
+  height: 100%;
 }
 
 .rounded-button {
@@ -30,7 +30,7 @@
   background-repeat: no-repeat;
   background-position: 0 25%;
   background-size: cover;
-  height: 100vh;
+  height: 100%;
 }
 
 .about-page-overlay {
@@ -39,8 +39,13 @@
 }
 
 .about-tagline {
-  position: absolute;
-  top: 100px;
+  padding-top: 10%;
+  height: 50vmax;
+}
+
+.about-text {
+  height: 100%;
+  padding-bottom: 10%
 }
 
 .news-feed {
@@ -103,7 +108,7 @@
 }
 
 .footer {
-  position: relative;
+  position: inherit;
   bottom: 0;
 }
 
